@@ -25,8 +25,8 @@
    Program specifications:
 
    This program will run the specified command in a separate process
-   group (session) and apply the restrictions as specified before
-   forking and executing the command.
+   group (session) and apply the restrictions as specified after
+   forking, before executing the command.
 
    The stdin and stdout streams are passed to the command and runguard
    does not read or write to these. Error and verbose messages from
@@ -80,7 +80,6 @@ char  *cmdname;
 char **cmdargs;
 char  *rootdir;
 char  *outputfilename;
-FILE  *outputfile;
 
 int runuid;
 int rungid;
@@ -217,6 +216,7 @@ real user ID.\n",progname);
 
 void outputtime()
 {
+	FILE  *outputfile;
 	double timediff; /* in seconds */
 
 	if ( gettimeofday(&endtime,NULL) ) error(errno,"getting time");
@@ -227,10 +227,17 @@ void outputtime()
 	verbose("runtime is %.3lf seconds",timediff);
 
 	if ( use_output ) {
+		verbose("writing runtime to file `%s'",outputfilename);
+
+		if ( (outputfile = fopen(outputfilename,"w"))==NULL ) {
+			error(errno,"cannot open `%s'",outputfilename);
+		}
 		if ( fprintf(outputfile,"%.3lf\n",timediff)==0 ) {
 			error(0,"cannot write to file `%s'",outputfile);
 		}
-		if ( fclose(outputfile) ) error(errno,"closing file `%s'",outputfile);
+		if ( fclose(outputfile) ) {
+			error(errno,"closing file `%s'",outputfilename);
+		}
 	}
 }
 
@@ -295,6 +302,114 @@ inline long readoptarg(const char *desc, long minval, long maxval)
 	return arg;
 }
 
+void setrestrictions()
+{
+	char *path;
+	char  cwd[MAXPATHLEN+3];
+
+	struct rlimit lim;
+
+	/* Clear environment to prevent all kinds of security holes, save PATH */
+	path = getenv("PATH");
+	environ[0] = NULL;
+	/* FIXME: Clean path before setting it again? */
+	if ( path!=NULL ) setenv("PATH",path,1);
+
+	/* Set resource limits: must be root to raise hard limits.
+	   Note that limits can thus be raised from the systems defaults! */
+
+	/* First define shorthand macro function */
+#define setlim(type) \
+	if ( setrlimit(RLIMIT_ ## type, &lim)!=0 ) { \
+		if ( errno==EPERM ) { \
+			warning("no permission to set resource RLIMIT_" #type); \
+		} else { \
+			error(errno,"setting resource RLIMIT_" #type); \
+		} \
+	}
+
+	if ( cputime!=RLIM_INFINITY ) {
+		verbose("setting CPU-time limit to %d seconds",(int)cputime);
+	}
+	lim.rlim_cur = lim.rlim_max = cputime;
+	setlim(CPU);
+
+	if ( memsize!=RLIM_INFINITY ) {
+		verbose("setting memory limits to %d bytes",(int)memsize);
+	}
+	lim.rlim_cur = lim.rlim_max = memsize;
+	setlim(AS);
+	setlim(DATA);
+	setlim(STACK);
+	setlim(MEMLOCK);
+
+	if ( filesize!=RLIM_INFINITY ) {
+		verbose("setting filesize limit to %d bytes",(int)filesize);
+	}
+	lim.rlim_cur = lim.rlim_max = filesize;
+	setlim(FSIZE);
+
+	if ( nproc!=RLIM_INFINITY ) {
+		verbose("setting process limit to %d",(int)nproc);
+	}
+	lim.rlim_cur = lim.rlim_max = nproc;
+	setlim(NPROC);
+
+#undef setlim
+
+	if ( no_coredump ) {
+		verbose("disabling core dumps");
+		lim.rlim_cur = lim.rlim_max = 0;
+		if ( setrlimit(RLIMIT_CORE,&lim)!=0 ) error(errno,"disabling core dumps");
+	}
+
+	/* Set root-directory and change directory to there. */
+	if ( use_root ) {
+		/* Small security issue: when running setuid-root, people can find
+		   out which directories exist from error message. */
+		if ( chdir(rootdir) ) error(errno,"cannot chdir to `%s'",rootdir);
+
+		/* Get absolute pathname of rootdir, by reading it. */
+		if ( getcwd(cwd,MAXPATHLEN)==NULL ) error(errno,"cannot get directory");
+		if ( cwd[strlen(cwd)-1]!='/' ) strcat(cwd,"/");
+
+		/* Canonicalize CHROOT_PREFIX: the use of NULL below is a GNU
+		   extension, recommended for security */
+		if ( (path = realpath(CHROOT_PREFIX,NULL))==NULL ) {
+			error(errno,"cannot canonicalize path '%s'",CHROOT_PREFIX);
+		}
+
+		/* Check that we are within prescribed path. */
+		if ( strncmp(cwd,path,strlen(path))!=0 ) {
+			error(0,"invalid root: must be within `%s'",path);
+		}
+		free(path);
+
+		if ( chroot(".") ) error(errno,"cannot change root to `%s'",cwd);
+		verbose("using root-directory `%s'",cwd);
+	}
+
+	/* Set group-id (must be root for this, so before setting user). */
+	if ( use_group ) {
+		if ( setgid(rungid) ) error(errno,"cannot set group ID to `%d'",rungid);
+		verbose("using group ID `%d'",rungid);
+	}
+	/* Set user-id (must be root for this). */
+	if ( use_user ) {
+		if ( setuid(runuid) ) error(errno,"cannot set user ID to `%d'",runuid);
+		verbose("using user ID `%d' for command",runuid);
+	} else {
+		/* Permanently reset effective uid to real uid, to prevent
+		   child command from having root privileges.
+		   Note that this means that the child runs as the same user
+		   as the watchdog process and can thus manipulate it, e.g. by
+		   sending SIGSTOP/SIGCONT! */
+		if ( setuid(getuid()) ) error(errno,"cannot reset real user ID");
+		verbose("reset user ID to `%d' for command",getuid());
+	}
+	if ( geteuid()==0 || getuid()==0 ) error(0,"root privileges not dropped");
+}
+
 int main(int argc, char **argv)
 {
 	sigset_t oldmask, newmask;
@@ -303,21 +418,12 @@ int main(int argc, char **argv)
 	int   exitcode;
 	char *valid_users;
 	char *ptr;
-	char *path;
-	char  cwd[MAXPATHLEN+3];
 	int   opt;
 	double runtime_d;
 
-	struct rlimit lim;
 	struct itimerval itimer;
 
 	progname = argv[0];
-
-	/* Clear environment to prevent all kinds of security holes, save PATH */
-	path = getenv("PATH");
-	environ[0] = NULL;
-	/* FIXME: Clean path before setting it again? */
-	if ( path!=NULL ) setenv("PATH",path,1);
 
 	/* Parse command-line options */
 	use_root = use_time = use_user = use_output = no_coredump = 0;
@@ -419,116 +525,32 @@ int main(int argc, char **argv)
 		if ( ptr==NULL || runuid<=0 ) error(0,"illegal user specified: %d",runuid);
 	}
 
-	/* Set resource limits: must be root to raise hard limits.
-	   Note that limits can thus be raised from the systems defaults! */
-
-	/* First define shorthand macro function */
-#define setlim(type) \
-	if ( setrlimit(RLIMIT_ ## type, &lim)!=0 ) { \
-		if ( errno==EPERM ) { \
-			warning("no permission to set resource RLIMIT_" #type); \
-		} else { \
-			error(errno,"setting resource RLIMIT_" #type); \
-		} \
-	}
-
-	if ( cputime!=RLIM_INFINITY ) {
-		verbose("setting CPU-time limit to %d seconds",(int)cputime);
-	}
-	lim.rlim_cur = lim.rlim_max = cputime;
-	setlim(CPU);
-
-	if ( memsize!=RLIM_INFINITY ) {
-		verbose("setting memory limits to %d bytes",(int)memsize);
-	}
-	lim.rlim_cur = lim.rlim_max = memsize;
-	setlim(AS);
-	setlim(DATA);
-	setlim(STACK);
-	setlim(MEMLOCK);
-
-	if ( filesize!=RLIM_INFINITY ) {
-		verbose("setting filesize limit to %d bytes",(int)filesize);
-	}
-	lim.rlim_cur = lim.rlim_max = filesize;
-	setlim(FSIZE);
-
-	if ( nproc!=RLIM_INFINITY ) {
-		verbose("setting process limit to %d",(int)nproc);
-	}
-	lim.rlim_cur = lim.rlim_max = nproc;
-	setlim(NPROC);
-
-#undef setlim
-
-	if ( no_coredump ) {
-		verbose("disabling core dumps");
-		lim.rlim_cur = lim.rlim_max = 0;
-		if ( setrlimit(RLIMIT_CORE,&lim)!=0 ) error(errno,"disabling core dumps");
-	}
-
-	/* Set root-directory and change directory to there. */
-	if ( use_root ) {
-		/* Small security issue: when running setuid-root, people can find
-		   out which directories exist from error message. */
-		if ( chdir(rootdir) ) error(errno,"cannot chdir to `%s'",rootdir);
-
-		/* Get absolute pathname of rootdir, by reading it. */
-		if ( getcwd(cwd,MAXPATHLEN)==NULL ) error(errno,"cannot get directory");
-		if ( cwd[strlen(cwd)-1]!='/' ) strcat(cwd,"/");
-
-		/* Canonicalize CHROOT_PREFIX: the use of NULL below is a GNU
-		   extension, recommended for security */
-		if ( (path = realpath(CHROOT_PREFIX,NULL))==NULL ) {
-			error(errno,"cannot canonicalize path '%s'",CHROOT_PREFIX);
-		}
-
-		/* Check that we are within prescribed path. */
-		if ( strncmp(cwd,path,strlen(path))!=0 ) {
-			error(0,"invalid root: must be within `%s'",path);
-		}
-		free(path);
-
-		if ( chroot(".") ) error(errno,"cannot change root to `%s'",cwd);
-		verbose("using root-directory `%s'",cwd);
-	}
-
-	/* Set group-id (must be root for this, so before setting user). */
-	if ( use_group ) {
-		if ( setgid(rungid) ) error(errno,"cannot set group ID to `%d'",rungid);
-		verbose("using group ID `%d'",rungid);
-	}
-	/* Set user-id (must be root for this). */
-	if ( use_user ) {
-		if ( setuid(runuid) ) error(errno,"cannot set user ID to `%d'",runuid);
-		verbose("using user ID `%d'",runuid);
-	} else {
-		/* Reset effective uid to real uid, to increase security
-		   when program is run setuid */
-		if ( setuid(getuid()) ) error(errno,"cannot reset real user ID");
-		verbose("using real uid `%d' as effective uid",getuid());
-	}
-	if ( geteuid()==0 || getuid()==0 ) error(0,"root privileges not dropped");
-
-	/* Open output file for writing running time to */
-	if ( use_output ) {
-		outputfile = fopen(outputfilename,"w");
-		if ( outputfile==NULL ) error(errno,"cannot open `%s'",outputfilename);
-		verbose("using file `%s' to write runtime to",outputfilename);
-	}
-
 	switch ( child_pid = fork() ) {
 	case -1: /* error */
 		error(errno,"cannot fork");
-
 	case  0: /* run controlled command */
 		/* Run the command in a separate process group so that the command
 		   and all its children can be killed off with one signal. */
-		setsid();
+		if ( setsid()==-1 ) error(errno,"setsid failed");
+
+		/* Apply all restrictions for child process. */
+		setrestrictions();
+
+		/* And execute child command. */
 		execvp(cmdname,cmdargs);
 		error(errno,"cannot start `%s'",cmdname);
 
 	default: /* become watchdog */
+
+		/* Shed privileges, only if not using a separate child uid,
+		   because in that case we may need root privileges to kill
+		   the child process. Do not use Linux specific setresuid()
+		   call with saved set-user-ID. */
+		if ( !use_user ) {
+			if ( setuid(getuid())!=0 ) error(errno, "setting watchdog uid");
+			verbose("watchdog using user ID `%d'",getuid());
+		}
+
 		if ( gettimeofday(&starttime,NULL) ) error(errno,"getting time");
 
 		/* unmask all signals */
@@ -556,6 +578,9 @@ int main(int argc, char **argv)
 		/* Wait for the child command to finish */
 		while ( (pid = wait(&status))!=-1 && pid!=child_pid );
 		if ( pid!=child_pid ) error(errno,"waiting on child");
+
+		/* Drop root before writing to output file. */
+		if ( setuid(getuid())!=0 ) error(errno,"dropping root privileges");
 
 		outputtime();
 
