@@ -40,6 +40,7 @@ Version 3.0.0 - SVN
  - Fixed DB installation support with script 'dj-setup-database'.
  - Update included dash shell to version 0.5.5.1-2 (Debian upstream).
  - Replace beep by alert plugin program. (Closes: #1878083)
+ - Add functionality and fix security issue in runguard, thanks Thomas Rast.
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
